--- a/_sass/_type/_type.scss
+++ b/_sass/_type/_type.scss
@@ -209,9 +209,9 @@ h3 {
 		color: $primary-headline;
 		font-size: 30px;
 		font-size: 3.0rem;
-		line-height: 50px;
-		line-height: 5.0rem;
-		margin: 0;
+		line-height: 40px;
+		line-height: 4.0rem;
+		margin: 0 0 45px 0;
 		text-align: left;
 	}
 
